welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not enough arguments for method motif: (hauteur: Int)Array[java.awt.Color].
Unspecified value parameter hauteur.
  var mot = motif()
                 ^Array2:24: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-0 to motif.lenght-2){
                    ^Array2:30: error: not found: value i
  setCouleurBrosse(motif((i+dec)%motif.lenght))
                          ^Array2:30: error: value lenght is not a member of Array[java.awt.Color]
  setCouleurBrosse(motif((i+dec)%motif.lenght))
                                       ^Array2:33: error: value lenght is not a member of Array[java.awt.Color]
  for(i<-1 to motif.lenght){
                    ^Array2:15: error: not found: value i
  mot(i) = getCouleurSol()
      ^